Added correct src path for images

--- a/ba-web-app/src/app/student/video/video.component.html
+++ b/ba-web-app/src/app/student/video/video.component.html
@@ -272,7 +272,7 @@
 
                   <div class="academy-video">
                       <div class="play-list-crd  brd-box">
-                          <img class=" card-img-top img-fluid" src="img/play.jpg" alt="Card image">
+                          <img class=" card-img-top img-fluid" src="assets/img/play.png" alt="Card image">
                       </div>
                   </div>
               </div>
