--- a/ba-web-app/src/app/student/playlist/playlist.component.html
+++ b/ba-web-app/src/app/student/playlist/playlist.component.html
@@ -26,7 +26,7 @@
 					<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 						 <div class="card play-list-crd"> 
 							<a href="video.html">
-								<img class=" card-img-top  img-fluid" src="img/play.png" alt="Card image">
+								<img class=" card-img-top  img-fluid" src="assets/img/play.png" alt="Card image">
 							</a>
 							<div class="card-body text-left">
 								<h4 class="enrolled-card">
@@ -42,7 +42,7 @@
 					<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 						 <div class="card play-list-crd"> 
 							<a href="video.html">
-								<img class=" card-img-top  img-fluid" src="img/play.png" alt="Card image">
+								<img class=" card-img-top  img-fluid" src="assets/img/play.png" alt="Card image">
 							</a>
 							<div class="card-body text-left">
 								<h4 class="enrolled-card">
@@ -58,7 +58,7 @@
 					<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 						 <div class="card play-list-crd"> 
 							<a href="video.html">
-								<img class=" card-img-top  img-fluid" src="img/play.png" alt="Card image">
+								<img class=" card-img-top  img-fluid" src="assets/img/play.png" alt="Card image">
 							</a>
 							<div class="card-body text-left">
 								<h4 class="enrolled-card">
@@ -74,7 +74,7 @@
 					<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 						 <div class="card play-list-crd"> 
 							<a href="video.html">
-								<img class=" card-img-top  img-fluid" src="img/play.png" alt="Card image">
+								<img class=" card-img-top  img-fluid" src="assets/img/play.png" alt="Card image">
 							</a>
 							<div class="card-body text-left">
 								<h4 class="enrolled-card">
@@ -92,7 +92,7 @@
 					<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 						 <div class="card play-list-crd"> 
 							<a href="video.html">
-								<img class=" card-img-top  img-fluid" src="img/play.png" alt="Card image">
+								<img class=" card-img-top  img-fluid" src="assets/img/play.png" alt="Card image">
 							</a>
 							<div class="card-body text-left">
 								<h4 class="enrolled-card">
@@ -108,7 +108,7 @@
 					<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 						 <div class="card play-list-crd"> 
 							<a href="video.html">
-								<img class=" card-img-top  img-fluid" src="img/play.png" alt="Card image">
+								<img class=" card-img-top  img-fluid" src="assets/img/play.png" alt="Card image">
 							</a>
 							<div class="card-body text-left">
 								<h4 class="enrolled-card">
@@ -124,7 +124,7 @@
 					<div class="col-lg-3 col-md-4 col-sm-6 col-6">
 						 <div class="card play-list-crd"> 
 							<a href="video.html">
-								<img class=" card-img-top  img-fluid" src="img/play.png" alt="Card image">
+								<img class=" card-img-top  img-fluid" src="assets/img/play.png" alt="Card image">
 							</a>
 							<div class="card-body text-left">
 								<h4 class="enrolled-card">
