--- a/ba-web-app/src/app/student/video/video.component.html
+++ b/ba-web-app/src/app/student/video/video.component.html
@@ -280,4 +280,6 @@
       </div>
       <!--Instructor end-->
   </main>
+  {{message}}
+    <button (click)="newMessage()">New Message</button>
 </section>
