imnproved courseID route

--- a/ba-web-app/src/app/student/enrolled-courses/enrolled-courses.component.html
+++ b/ba-web-app/src/app/student/enrolled-courses/enrolled-courses.component.html
@@ -10,11 +10,17 @@
 				<h6>{{course.courseName}}</h6>
 				<div class="card bottom-btm2rem"> 
 					<div (click)="loadCourseVideos()">
+						<input type="hidden" class="courseId" name="courseId" value={{course.courseId}}>
 						<img class=" card-img-top  img-fluid" src={{course.coverImage}} alt="Card image">
 					</div>
-					<div (click)="loadCourseVideos()" class="btn btn-primary btn-lg btn-block select-btn-cust">Select</div>
+					<div (click)="loadCourseVideos(course.courseId)" class="btn btn-primary btn-lg btn-block select-btn-cust">
+						<input type="hidden" class="courseId" name="courseId" value={{course.courseId}}>
+						Select
+					</div>
 					<div class="text-left">
-						<h4 class="enrolled-card" (click)="loadCourseVideos()">
+					
+						<h4 class="enrolled-card" (click)='loadCourseVideos(course.courseId)'>
+							<input type="hidden" class="courseId" name="courseId" value={{course.courseId}}>
 							{{course.instructorName}}
 						</h4>
 					</div>
