--- a/ba-web-app/src/app/student/video/video.component.html
+++ b/ba-web-app/src/app/student/video/video.component.html
@@ -235,7 +235,7 @@
                               </div>
 
                               <!-- Card body -->
-                              <div id="chpater6" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
+                              <div id="chpater6" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx" #chpater6>
                                   <div class="card-body">
                                       <div class="chapter-info">
                                           Java Introduction
@@ -272,17 +272,17 @@
                 <div id="videoDisplay" class="academy-video">
                     <h1 id="videoTitle"></h1>
                     <div id="player" class="play-list-crd  brd-box">
-                      <video id="video" class=" card-img-top img-fluid" >
+                      <video class=" card-img-top img-fluid" #video>
                         <source src="https://s3.amazonaws.com/brilliant-academe-video-upload/Java%20Programming%201/java_installation_video.mp4" type="video/mp4">
                       </video>
                       <div id="controls">
-                        <button id="replayBtn" class="replay" title="replay" accesskey="R">Replay</button>	
+                        <button id="replayBtn" class="replay" title="replay" accesskey="R">Replay</button>
                         <button id="playPauseBtn" class="play" title="play" accesskey="P">Play</button>
                         <progress id="progressBar" min="0" max="100" value="0">0% played</progress>
                         <button id="seekMinusBtn">BACKWARD</button>
                         <button id="seekPlusBtn">FORWARD</button>
                         <input type="range" id="volumeBar" title="volume" min="0" max="1" step="0.1" value="1">
-                        <button id="muteBtn" class="mute" title="mute">Mute</button>	
+                        <button id="muteBtn" class="mute" title="mute">Mute</button>
                         <button id="fullScreenBtn" class='fullscreen' title='toggle full screen' accesskey="T">[&nbsp;&nbsp;]</button>
                       </div>
                     </div>
