--- a/ba-web-app/src/app/student/video/video.component.html
+++ b/ba-web-app/src/app/student/video/video.component.html
@@ -13,14 +13,15 @@
                       <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
 
                           <!-- Accordion card -->
-                          <div class="card">
+
+                          <div class="card" *ngFor="let video of videos[0]">
 
                               <!-- Card header -->
                               <div class="card-header collapse-heading-video" role="tab" id="headingOne1">
                                   <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true"
                                      aria-controls="collapseOne1">
                                       <h5 class="mb-0">
-                                          Chapter 1
+                                          {{ video.sectionName }}
                                       </h5>
                                   </a>
                               </div>
@@ -28,234 +29,11 @@
                               <!-- Card body -->
                               <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
                                   <div class="card-body">
-                                      <div class="chapter-info">
-                                          Jquery Introduction
+                                      <div class="chapter-info" *ngFor="let lecture of video.lectures ;">
+                                          {{ lecture.lectureTitle }}
+
                                           <!-- Default unchecked --><div class="pull-right">
                                               <i class="fa fa-check viewed" aria-hidden="true"></i>
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Bootstrap Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <i class="fa fa-check viewed" aria-hidden="true"></i>
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Hadoop Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                  </div>
-                              </div>
-
-                          </div>
-                          <!-- Accordion card -->
-                          <!-- Accordion card -->
-                          <div class="card">
-
-                              <!-- Card header -->
-                              <div class="card-header collapse-heading-video" role="tab" id="headingTwo2">
-                                  <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#chpater2"
-                                     aria-expanded="false" aria-controls="collapseTwo2">
-                                      <h5 class="mb-0">
-                                          Chapter 2
-                                      </h5>
-                                  </a>
-                              </div>
-
-                              <!-- Card body -->
-                              <div id="chpater2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2" data-parent="#accordionEx">
-                                  <div class="card-body">
-                                      <div class="chapter-info">
-                                          Java Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Python Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          C++ Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                  </div>
-                              </div>
-
-                          </div>
-                          <!-- Accordion card -->
-                          <!-- Accordion card -->
-                          <div class="card">
-
-                              <!-- Card header -->
-                              <div class="card-header collapse-heading-video" role="tab" id="headingThree3">
-                                  <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#chpater3"
-                                     aria-expanded="false" aria-controls="collapseThree3">
-                                      <h5 class="mb-0">
-                                          Chapter 3
-                                      </h5>
-                                  </a>
-                              </div>
-
-                              <!-- Card body -->
-                              <div id="chpater3" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
-                                  <div class="card-body">
-                                      <div class="chapter-info">
-                                          Java Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Python Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Jquery Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                  </div>
-                              </div>
-
-                          </div>
-                          <!-- Accordion card -->
-                          <!-- Accordion card -->
-                          <div class="card">
-
-                              <!-- Card header -->
-                              <div class="card-header collapse-heading-video" role="tab" id="headingThree3">
-                                  <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#chpater4"
-                                     aria-expanded="false" aria-controls="collapseThree33">
-                                      <h5 class="mb-0">
-                                          Chapter 4
-                                      </h5>
-                                  </a>
-                              </div>
-
-                              <!-- Card body -->
-                              <div id="chpater4" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
-                                  <div class="card-body">
-                                      <div class="chapter-info">
-                                          Java Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Python Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Jquery Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                  </div>
-                              </div>
-
-                          </div>
-                          <!-- Accordion card -->
-                          <!-- Accordion card -->
-                          <div class="card">
-
-                              <!-- Card header -->
-                              <div class="card-header collapse-heading-video" role="tab" id="headingThree3">
-                                  <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#chpater5"
-                                     aria-expanded="false" aria-controls="collapseThree33">
-                                      <h5 class="mb-0">
-                                          Chapter 5
-                                      </h5>
-                                  </a>
-                              </div>
-
-                              <!-- Card body -->
-                              <div id="chpater5" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
-                                  <div class="card-body">
-                                      <div class="chapter-info">
-                                          Java Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Python Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Jquery Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                  </div>
-                              </div>
-
-                          </div>
-                          <!-- Accordion card -->
-                          <!-- Accordion card -->
-                          <div class="card">
-
-                              <!-- Card header -->
-                              <div class="card-header collapse-heading-video" role="tab" id="headingThree3">
-                                  <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#chpater6"
-                                     aria-expanded="false" aria-controls="collapseThree33">
-                                      <h5 class="mb-0">
-                                          Chapter 6
-                                      </h5>
-                                  </a>
-                              </div>
-
-                              <!-- Card body -->
-                              <div id="chpater6" class="collapse" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx" #chpater6>
-                                  <div class="card-body">
-                                      <div class="chapter-info">
-                                          Java Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Python Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
-                                          </div>
-                                      </div>
-                                      <div class="chapter-info">
-                                          Jquery Introduction
-                                          <!-- Default unchecked -->
-                                          <div class="pull-right">
-                                              <!--<i class="fa fa-check viewed" aria-hidden="true"></i>-->
                                           </div>
                                       </div>
                                   </div>
@@ -269,10 +47,17 @@
                   </div>
               </div>
               <div class="col-12 col-lg-9 col-sm-7 bg_dark_right" id="listing">
-
-            </div>
-          </div>
-      </div>
+                  <div class="academy-video">
+                      <div class="play-list-crd  brd-box">
+                        <h1>{{ videos[0][0].lectures[0].lectureTitle }}</h1>
+                        <video class=" card-img-top img-fluid" controls>
+                          <source src='{{ videos[0][0].lectures[0].lectureLink }}' type="video/mp4">
+                        </video>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
       <!--Instructor end-->
   </main>
 </section>
