--- a/ba-web-app/src/app/student/enrolled-courses/enrolled-courses.component.html
+++ b/ba-web-app/src/app/student/enrolled-courses/enrolled-courses.component.html
@@ -6,7 +6,7 @@
 	<div class="row custom-card">
 		<ng-template [ngIf]="courses.length">	
 				
-    	<div class="col-lg-2 col-md-3 col-sm-4 col-6" *ngFor="let course of courses[0]">
+    	<div class="col-lg-2 col-md-3 col-sm-4 col-6" *ngFor="let course of courses">
 				<h6>{{course.courseName}}</h6>
 				<div class="card bottom-btm2rem"> 
 					<div (click)="loadCourseVideos()">
