Added missing section of header to all pages and fixed layout of video page

--- a/ba-web-app/src/app/app.component.html
+++ b/ba-web-app/src/app/app.component.html
@@ -201,6 +201,21 @@
 	<!--Header open-->
 
 <header class="fixed-top bg-dark">
+  <div class="container-fluid d-none d-lg-block head_bg ">
+    <div class="row head_gry">
+      <div class="col-12 col-sm-4">Take the world's best courses, online </div>
+      <div class="col-12 col-sm-8 header_right">
+        <ul>
+          <li><a href="#"><i class="glyph-icon flaticon-settings"> </i></a></li>
+          <li>CUSTOMER SUPPORT 9AM - 10PM (7 DAYS A WEEK) 0123456789</li>
+          <li><a href="#"><i class="glyph-icon flaticon-social-youtube-circular-button linkcolor"></i></a></li>
+          <li><a href="#"><i class="glyph-icon flaticon-linkedin incolor"></i></a></li>
+          <li><a href="#"><i class="glyph-icon flaticon-social-twitter-circular-button twtcolor"></i></a></li>
+          <li><a href="#"><i class="glyph-icon flaticon-social-facebook-circular-button facecolor"> </i></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="container-fluid head_bg_wt " id="mainNav">
     <div class="container-fluid" >
       <div class="row">
