--- a/ba-web-app/src/app/student/video/video.component.html
+++ b/ba-web-app/src/app/student/video/video.component.html
@@ -1,8 +1,7 @@
 <section class="bg_banner_inner text-center">
     <h2>Video</h2>
 </section>
-<!-- <ng-template [ngIf]="videos.length"> -->
-<ng-template [ngIf]="true">
+<ng-template [ngIf]="videos.length">
     <section class="container-fluid">
         <main role="main">
 
@@ -15,22 +14,19 @@
                         <!--Accordion wrapper-->
                             <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
                             <!-- Accordion card -->
-                            <!-- <div class="card" *ngFor="let video of videos[0]"> -->
-                                <div class="card">
+                            <div class="card" *ngFor="let video of videos[0]">
                                 <!-- Card header -->
                                     <div class="card-header collapse-heading-video" role="tab" id="headingOne1">
                                         <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">
-                                            <h5 class="mb-0"><!-- {{ video.sectionName }} --></h5>
+                                            <h5 class="mb-0">{{ video.sectionName }}</h5>
                                         </a>
                                     </div>
                                     <!-- Card body -->
                                     <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
                                         <div class="card-body">
-                                            <!-- <div class="chapter-info" *ngFor="let lecture of video.lectures;"> -->
-                                                <div class="chapter-info">
-                                                <!-- {{ lecture.lectureTitle }} -->
-
-                                                <!-- Default unchecked --><div class="pull-right">
+                                            <div class="chapter-info" *ngFor="let lecture of video.lectures;">
+                                                <span (click)='chooseCourseVideo(lecture.lectureLink, lecture.lectureTitle)'>{{ lecture.lectureTitle }}</span>
+                                                <div class="pull-right">
                                                     <i class="fa fa-check viewed" aria-hidden="true"></i>
                                                 </div>
                                             </div>
@@ -48,8 +44,8 @@
                         <div class="academy-video">
                             <div class="play-list-crd  brd-box">
                                 <!-- Videogular wrapper -->
-                                <!-- <h1>{{ videos[0][0].lectures[0].lectureTitle }}</h1> -->
-                                <vg-player class=" card-img-top img-fluid">
+                                <h1>{{ currentVideoTitle }}</h1>
+                                <vg-player #player class=" card-img-top img-fluid">
                                     <vg-overlay-play></vg-overlay-play>
                                     <vg-buffering></vg-buffering>
                                     <vg-scrub-bar [vgSlider]="true">
@@ -57,7 +53,7 @@
                                         <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
                                     </vg-scrub-bar>
                                     <!-- Videogular controls -->
-                                    <vg-controls>
+                                    <vg-controls [vgAutohide]="true" [vgAutohideTime]="1.5">
                                         <vg-play-pause></vg-play-pause>
                                         <vg-playback-button></vg-playback-button>
                                         <vg-time-display vgProperty="current" vgFormat="mm:ss"></vg-time-display>
@@ -70,10 +66,9 @@
                                     </vg-controls>
 
                                     <video [vgMedia]="media" #media id="singleVideo" preload="auto" crossorigin>
-                                        <source src="http://static.videogular.com/assets/videos/videogular.mp4" type="video/mp4">
-                                        <!-- <source src="https://cors-anywhere.herokuapp.com/{{ videos[0][0].lectures[0].lectureLink }}" type="video/mp4"> -->
-                                        <track kind="subtitles" label="English" src="http://static.videogular.com/assets/subs/pale-blue-dot.vtt" srclang="en" default>
-                                        <track kind="subtitles" label="Español" src="http://static.videogular.com/assets/subs/pale-blue-dot-es.vtt" srclang="es">
+                                        <source src="https://cors-anywhere.herokuapp.com/https://s3.amazonaws.com/brilliant-academe-video-upload/{{ currentVideoURL }}" type="video/mp4">
+                                        <!-- <track kind="subtitles" label="English" src="http://static.videogular.com/assets/subs/pale-blue-dot.vtt" srclang="en" default>
+                                        <track kind="subtitles" label="Español" src="http://static.videogular.com/assets/subs/pale-blue-dot-es.vtt" srclang="es"> -->
                                     </video>
                                     
                                 </vg-player>
